# cachecache

./: .gitignore  .gitmodules  .ocamlformat  .ocamlformat-ignore  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  cachecache-bench.opam  cachecache.opam  dune-project  gospel-lru-bench.opam  gospel-lru.opam
bench/: Makefile  dune  lru_trace_definition.ml  main.ml  replay.ml  trace_auto_file_format.ml  trace_auto_file_format_intf.ml
src/: Lru.mli  Lru_impl.mlw  cachecache.ml  chunk_lst.ml  dbllist.ml  dbllist.mli  dllist.ml  dllist.mli  dllist2.ml  dllist2.mli  dllist_rac.ml  dllist_rac.mli  dune  gospel_lru.mli  gospel_lru_impl.mlw  lfu.ml  lfu.mli  lru.ml  lru.mli  s.ml  stats.ml  stats.mli  through.ml  through.mli
src/Lru_impl/: why3session.xml
src/gospel_lru_impl/: why3session.xml
test/: dune  lfu.ml  lru.ml  main.ml  replay.ml
test/data/: replace_keys.txt
