opam-version: "2.0"
synopsis: "Efficient caching library for OCaml"
description: "Efficient caching library for OCaml"
maintainer: "Clément Pascutto <clement@pascutto.fr>"
authors: "Clément Pascutto <clement@pascutto.fr>"
license: "MIT"
homepage: "https://github.com/pascutto/cachecache"
doc: "https://pascutto.github.io/cachecache/"
bug-reports: "https://github.com/pascutto/cachecache/issues"
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.07.1"}
  "ppx_repr"
  "mtime.clock.os"
  "bechamel" {with-test}
  "bechamel-notty" {with-test}
  "notty" {with-test}
  "lru" 
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/pascutto/cachecache.git"
