opam-version: "2.0"

maintainer: ["Clément Pascutto <clement@tarides.com>"]
authors: ["Clément Pascutto <clement@tarides.com>"]
synopsis: "A verified implementation of simple LRU caches"
description: """
A verified implementation of simple LRU caches
"""

homepage: "https://github.com/pascutto/gospel-lru"
dev-repo: "git+https://github.com/pascutto/gospel-lru.git"
doc: "https://pascutto.github.io/gospel-lru/"
bug-reports: "https://github.com/pascutto/gospel-lru/issues"
license: "MIT"

depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.07.1"}
  "bechamel"
  "lru"
]

build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

pin-depends: [
  [ "bechamel.dev" "git+https://github.com/dinosaure/bechamel.git#2c0f2cb5d885257ea32e36a90c3616755203fbb9"]
]
