opam-version: "2.0"

maintainer: ["Clément Pascutto <clement@tarides.com>"]
authors: ["Clément Pascutto <clement@tarides.com>"]
synopsis: "A verified implementation of simple LRU caches"
description: """
A verified implementation of simple LRU caches
"""

homepage: "https://github.com/pascutto/gospel-lru"
dev-repo: "git+https://github.com/pascutto/gospel-lru.git"
doc: "https://pascutto.github.io/gospel-lru/"
bug-reports: "https://github.com/pascutto/gospel-lru/issues"
license: "MIT"

depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "4.07.1"}
  "why3"
  "alcotest" {with-test}
]

build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

pin-depends: [
  [ "why3.dev" "git+https://gitlab.inria.fr/why3/why3.git#4548a86e4f5972f57169151eac3e04a1ddc4e89c" ]
]
